--- a/quantic/src/app/page.module.css
+++ b/quantic/src/app/page.module.css
@@ -13,7 +13,12 @@
   min-height: 100svh;
   padding: 80px;
   gap: 64px;
-  font-family: var(--font-geist-sans);
+  /* font-family: var(--font-geist-sans); */
+}
+
+
+.test {
+  background-color: #5f259f;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,7 +40,7 @@
 }
 
 .main ol {
-  font-family: var(--font-geist-mono);
+  /* font-family: var(--font-geist-mono); */
   padding-left: 0;
   margin: 0;
   font-size: 14px;
